--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.oreilly'
 version = '1.0'
-sourceCompatibility = '1.8'
+sourceCompatibility = '1.11'
 
 repositories {
     mavenCentral()
@@ -19,8 +19,10 @@ test {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation ('org.springframework.boot:spring-boot-starter-test') {
         exclude module: 'junit'
     }
-    testCompile 'org.junit.jupiter:junit-jupiter:5.5.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
+    testImplementation('io.projectreactor:reactor-test')
 }
